// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Caffee Mug"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el comoponente correctamente con la imagen personalizada 1`] = `
<img
  alt="Caffee Mug"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
